[project]
name = "miipher"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = ["lightning", "torchaudio", "speechbrain", "matplotlib", "pyroomacoustics", "hydra-core", "webdataset", "text2phonemesequence", "mecab-python3", "unidic", "wandb", "llvmlite", "gradio"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel", "pytest", "black"]
[tool.hatch.metadata]
allow-direct-references = true
